Updates to files that are not saved in the github repo

--- a/global_vac_index/aim_2/14_validate_index_markdown.Rmd
+++ b/global_vac_index/aim_2/14_validate_index_markdown.Rmd
@@ -1,7 +1,10 @@
-# Purpose: Create a model the predicts vaccination coverage based on vaccine improvement index
-# Author: Francisco Rios Casas
-# Date: Dec 22 2021
-
+---
+title: "14_validate_index"
+author: "Francisco Rios Casas"
+date: "4/22/2022"
+output: html_document
+---
+```{r}
 # clear environment
 # rm(list=ls())
 
@@ -29,6 +32,8 @@ full_data <- index_data %>% left_join(vax_data, by=c("gbd_location_id"="location
 full_data <- full_data %>% select(location, region, year, gbd_location_id, iso_code, iso_num_code, result, prop_val_MCV1, prop_val_DTP1, prop_val_DTP3) %>% filter(year!=2020)
 
 
+
+
 ########################################
 ##### METHOD 1 OF VALIDATING INDEX #####
 ########################################
@@ -40,7 +45,7 @@ row.number <- sample(1:nrow(data_subset), 0.8*nrow(data_subset))
 train <- data_subset[row.number,]
 test <- data_subset[-row.number,]
 
-# Model 1: Use index to predict measles vaccine coverage
+# fit a model for each vaccine
 model1 <- glm(prop_val_MCV1~factor(region)+year+result, data=train, family = "binomial")
 summary(model1)
 par(mfrow=c(2,2))
@@ -58,7 +63,7 @@ abline(a=0, b=1)
 BrierScore(test$prop_val_MCV1, pred1)
 
 
-# Model 2: Use index to predict DTP-1 vaccine coverage
+# fit second model
 model2 <- glm(prop_val_DTP1~factor(region)+year+result, data=train, family = "binomial")
 summary(model2)
 par(mfrow=c(2,2))
@@ -70,7 +75,7 @@ BrierScore(model2)
 par(mfrow=c(1,1))
 plot(test$prop_val_DTP1, pred2)
 
-# Model 3: Use index to predict DTP-3 vaccine coverage
+# fit third model
 model3 <- glm(prop_val_DTP3~factor(region)+year+result, data=train, family = "binomial")
 summary(model3)
 par(mfrow=c(2,2))
@@ -86,6 +91,12 @@ plot(test$prop_val_DTP3, pred3)
 ##### Use the model to predict 
 ##### vaccination coverage in 2019
 ########################################
+
+# create a dataframe of all locations and vaccines and include the year 2019
+newdata <- with(data, data.frame(ESTIAP = rep(unique(data$ESTIAP), each=224, length.out=12544),
+                                 YEAR = rep(2007:2020, each=16, length.out=12544),
+                                 RACEETHK_R = factor(rep(1:4, each=4, length.out=12544)),
+                                 INCPOV1 = factor(rep(1:4, length.out=12544))))
 
 newdata <- with(full_data, data.frame(location = rep(unique(full_data$location), each=1, length.out=175),
                                       year = rep(2019, length.out=175)))
@@ -117,3 +128,6 @@ plot(pred2019dtp3, newdata$prop_val_DTP3,
      main='Predicted vs. Actual Values DTP3, 2019')
 abline(a=0, b=1)
 BrierScore(pred2019dtp3, newdata$prop_val_DTP3)
+
+```
+
